tests/suite/errors/e07_assign_immutable.rs
// err: cannot assign to immutable variable `x`

fn main() {
    let x: i32 = 5;
    x = 10;
}
